[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilant-engine"
version = "0.1.0"
description = "Vigilant Engine with Multi-Provider Support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-cors",
    "python-dotenv",
    "requests",
    "google-generativeai",
    "razorpay",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "tavily-python",
    "replicate",
    "emoji",
    "stability-sdk",
    "yfinance",
    "google-search-results",
    "python-dateutil",
    "cryptography",
    "Pillow",
    "gspread",
    "oauth2client",
    "PyJWT",
    "runwayml",
    "qrcode",
    "duckduckgo_search",
]

[tool.setuptools]
package-dir = {"" = "."}
